updated files to make sure that we are able to  add items to coaches
